Update .chezmoiignore Add .chezmoitemplates/windows/run/00.ps1 Add 00 Change attributes of .chezmoitemplates/linux/run/00-install-package-mgr.sh Change attributes of .chezmoitemplates/linux/run/01-install-manual.sh Change attributes of .chezmoitemplates/linux/run/99-finalise.sh

--- a/.chezmoitemplates/linux/run/run_before_01-install-manual.sh.tmpl
+++ b/.chezmoitemplates/linux/run/run_before_01-install-manual.sh.tmpl
@@ -1,5 +1,4 @@
 #!{{ lookPath "bash" }}
-source '{{ .chezmoi.sourceDir }}/.assets/include.sh'
 
 if ! cmd_check starship; then
 	log_info "Installing Starship..."
@@ -11,5 +10,6 @@ if cmd_check vim; then
 	log_info "Setting up vim..."
 	vim \
 		-c 'PlugInstall' \
+		-c 'PlugClean' \
 		-c 'qa!'
 fi
