Install Yay; fix various small issues

--- a/.chezmoitemplates/linux/run_before_01-install-manual.sh.tmpl
+++ b/.chezmoitemplates/linux/run_before_01-install-manual.sh.tmpl
@@ -13,13 +13,11 @@ if cmd_check vim; then
 fi
 
 # Install Yay on Arch
-if cmd_check pacman; then
-	{{ .os.super }} pacman -S --needed git base-devel
-	git clone https://aur.archlinux.org/yay-bin.git
+if cmd_check pacman && !cmd_check yay; then
 	mkdir -p ~/.local/cache
 	git clone https://aur.archlinux.org/yay.git ~/.local/cache/yay
 	cd ~/.local/cache/yay
 	makepkg -si
 	cd -
-	rm -rf yay
+	rm -rf ~/.local/cache/yay
 fi
