--- a/run_before_00.tmpl
+++ b/run_before_00.tmpl
@@ -1,12 +1,9 @@
-{{- if eq .chezmoi.os "windows" -}}
-{{- 	template "windows/run_before_00.ps1.tmpl" . -}}
-{{- else if eq .chezmoi.os "linux" -}}
 #!{{ lookPath "bash" }}
 export LC_ALL=C.UTF-8
 export LANG=C.UTF-8
 set -eu
 {{	include ".assets/include.sh" -}}
-{{	template "linux/run_before_00-install-package-mgr.sh.tmpl" . -}}
-{{ 	template "linux/run_before_01-install-manual.sh.tmpl" . -}}
-{{	template "linux/run_before_99-finalise.sh.tmpl" . -}}
+{{	template "install-pkg.sh.tmpl" . -}}
+{{ 	template "install-manual.sh.tmpl" . -}}
+{{	template "install-finalise.sh.tmpl" . -}}
 {{- end -}}
