--- a/.chezmoitemplates/install-gui.sh.tmpl
+++ b/.chezmoitemplates/install-gui.sh.tmpl
@@ -1,7 +1,9 @@
 icons_dir="/usr/share/icons"
 themes_dir="/usr/share/themes"
+fonts_dir="/usr/share/fonts"
 tmp_dir="${HOME}/.cache/tmp"
 rm -rf "${tmp_dir}"
+mkdir -p ${tmp_dir}
 
 # Install Icons
 if [ ! -d "${icons_dir}/Colloid-dracula" ]; then
@@ -9,14 +11,31 @@ if [ ! -d "${icons_dir}/Colloid-dracula" ]; then
 	mkdir -p "${tmp_dir}/colloid"
 	git clone "https://github.com/vinceliuice/Colloid-icon-theme" "${tmp_dir}/colloid"
 	{{ .os.super }} "${tmp_dir}/colloid/install.sh" -s dracula -t purple
-	rm -rf "${tmp_dir}"
 	gtk-update-icon-cache
 fi
 
 # Install GTK Theme
 if [ ! -d "${themes_dir}/Dracula" ]; then
 	log_info "Installing Dracula..."
+	{{ .os.super }} mkdir -p "${themes_dir}/Dracula"
+	{{ .os.super }} git clone "https://github.com/dracula/gtk" "${themes_dir}/Dracula"
 fi
 
+# Install Fonts
+if [ ! -d "${fonts_dir}/FantasqueSansMono" ]; then
+	wget "https://github.com/ryanoasis/nerd-fonts/releases/download/v3.1.1/FantasqueSansMono.zip" -O "${tmp_dir}/fantasque.zip" 
+	yes | {{ .os.super }} unzip "${tmp_dir}/fantasque.zip" -d "${fonts_dir}/FantasqueSansMono"
+fi
+
+rm -rf "${tmp_dir}"
 log_info "Update gsettings..."
-gsettings set org.gnome.desktop.interface icon-theme "Colloid-purple-dracula-dark"
+gtk-update-icon-cache
+gsettings set org.gnome.desktop.interface icon-theme 'Colloid-purple-dracula-dark'
+gsettings set org.gnome.desktop.interface gtk-key-theme 'Dracula'
+gsettings set org.gnome.desktop.interface gtk-theme 'Dracula'
+gsettings set org.gnome.desktop.wm.preferences theme 'Dracula'
+gsettings set org.gnome.shell.extensions.user-theme name 'Dracula'
+gsettings set org.gnome.desktop.interface document-font-name 'FantasqueSansM Nerd Font 11'
+gsettings set org.gnome.desktop.interface font-name 'FantasqueSansM Nerd Font 11'
+gsettings set org.gnome.desktop.interface monospace-font-name 'FantasqueSansM Nerd Font Mono 10'
+gsettings set org.gnome.desktop.wm.preferences titlebar-font 'FantasqueSansM Nerd Font Bold 11'
