--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -2,12 +2,10 @@
 {{- $name := promptStringOnce . "name" "Your Name" -}}
 {{- $domain := promptStringOnce . "domain" "Your Domain" -}}
 {{- $host_choices := list "desktop" "laptop" "server" "termux" -}}
-{{- $host_type := promptChoiceOnce . "host_type" "Host Type" $host_choices -}}
+{{- $host := promptChoiceOnce . "host" "Host Type" $host_choices -}}
 {{- $use_gui := promptBoolOnce . "use_gui" "Will this machine be used Graphically" -}} 
-{{- if ($use_gui) -}}
-{{- $theme_choices := list "nord" "dracula" -}}
-{{- $theme_type := promptChoiceOnce . "theme_type" "Color Theme" $theme_choices -}}
-{{- end -}}
+{{- $color_theme_choices := list "nord" "dracula" -}}
+{{- $color_theme := promptChoiceOnce . "color_theme" "Color Theme" $color_theme_choices -}}
 
 {{/* find superuser command */}}
 {{- $dummy := set . "super" false -}}
@@ -39,10 +37,7 @@ email = {{ $email | quote }}
 name = {{ $name | quote }}
 domain = {{ $domain | quote }}
 use_gui = {{ $use_gui }}
-{{ if ($use_gui) }}
-[data.gui]
-color_theme = {{ $theme_type | quote }}
-{{ end }}
+
 [data.os]
 distro = {{ .distro | quote }}
 super = {{ 
@@ -54,6 +49,7 @@ super = {{
 wsl = {{ .wsl }}
 
 [data.style]
+color_theme = {{ $color_theme | quote }}
 os_color = {{
    if (eq .distro "termux") -}}
      'bold green'
