Update .chezmoi.toml Update .chezmoiexternal.toml Update .chezmoitemplates/install-gui.sh

--- a/.chezmoitemplates/install-gui.sh.tmpl
+++ b/.chezmoitemplates/install-gui.sh.tmpl
@@ -28,14 +28,14 @@ if [ ! -d "${fonts_dir}/FantasqueSansMono" ]; then
 fi
 
 rm -rf "${tmp_dir}"
-log_info "Update gsettings..."
-gtk-update-icon-cache
-gsettings set org.gnome.desktop.interface icon-theme 'Colloid-purple-dracula-dark'
-gsettings set org.gnome.desktop.interface gtk-key-theme 'Dracula'
-gsettings set org.gnome.desktop.interface gtk-theme 'Dracula'
-gsettings set org.gnome.desktop.wm.preferences theme 'Dracula'
-gsettings set org.gnome.shell.extensions.user-theme name 'Dracula'
-gsettings set org.gnome.desktop.interface document-font-name 'FantasqueSansM Nerd Font 11'
-gsettings set org.gnome.desktop.interface font-name 'FantasqueSansM Nerd Font 11'
-gsettings set org.gnome.desktop.interface monospace-font-name 'FantasqueSansM Nerd Font Mono 10'
-gsettings set org.gnome.desktop.wm.preferences titlebar-font 'FantasqueSansM Nerd Font Bold 11'
+# log_info "Update gsettings..."
+# gtk-update-icon-cache
+# gsettings set org.gnome.desktop.interface icon-theme 'Colloid-purple-dracula-dark'
+# gsettings set org.gnome.desktop.interface gtk-key-theme 'Dracula'
+# gsettings set org.gnome.desktop.interface gtk-theme 'Dracula'
+# gsettings set org.gnome.desktop.wm.preferences theme 'Dracula'
+# gsettings set org.gnome.shell.extensions.user-theme name 'Dracula'
+# gsettings set org.gnome.desktop.interface document-font-name 'FantasqueSansM Nerd Font 11'
+# gsettings set org.gnome.desktop.interface font-name 'FantasqueSansM Nerd Font 11'
+# gsettings set org.gnome.desktop.interface monospace-font-name 'FantasqueSansM Nerd Font Mono 10'
+# gsettings set org.gnome.desktop.wm.preferences titlebar-font 'FantasqueSansM Nerd Font Bold 11'
