--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -4,6 +4,8 @@
 {{- $host_choices := list "desktop" "laptop" "server" "termux" -}}
 {{- $host := promptChoiceOnce . "host" "Host Type" $host_choices -}}
 {{- $use_gui := promptBoolOnce . "use_gui" "Will this machine be used Graphically" -}} 
+{{- $color_mode_choices := list "dark" "light" -}}
+{{- $color_mode := promptChoiceOnce . "color_mode" "Color Mode" $color_mode_choices -}}
 {{- $color_theme_choices := list "nord" "dracula" -}}
 {{- $color_theme := promptChoiceOnce . "color_theme" "Color Theme" $color_theme_choices -}}
 
@@ -49,6 +51,7 @@ super = {{
 wsl = {{ .wsl }}
 
 [data.style]
+color_mode = {{ $color_mode | quote }}
 color_theme = {{ $color_theme | quote }}
 os_color = {{
    if (eq .distro "termux") -}}
