Change attributes of .config/kitty/kitty.conf

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1,4 +1,4 @@
-include dracula.conf
+include {{ .style.color_theme }}.conf
 wayland_titlebar_color system 
 background_opacity	0.85
 dynamic_background_opacity yes
