--- a/run_before_00.tmpl
+++ b/run_before_00.tmpl
@@ -7,5 +7,8 @@ set -eu
 {{- if .use_gui -}}
 {{  template "install-gui.sh.tmpl" . -}}
 {{- end -}}
+{{- if eq .os.distro "arch" -}}
+{{  template "install-archlinux.sh.tmpl" . -}}
+{{- end -}}
 {{  template "install-manual.sh.tmpl" . -}}
 {{  template "install-finalise.sh.tmpl" . -}}
