--- a/.chezmoitemplates/install-gui.sh.tmpl
+++ b/.chezmoitemplates/install-gui.sh.tmpl
@@ -6,11 +6,11 @@ rm -rf "${tmp_dir}"
 mkdir -p ${tmp_dir}
 
 # Install Icons
-if [ ! -d "${icons_dir}/Colloid-dracula" ]; then
+if [ ! -d "${icons_dir}/Colloid-dark" ]; then
 	log_info "Installing Colloid..."
 	mkdir -p "${tmp_dir}/colloid"
-	git clone "https://github.com/vinceliuice/Colloid-icon-theme" "${tmp_dir}/colloid"
-	{{ .os.super }} "${tmp_dir}/colloid/install.sh" -s dracula -t purple
+	git clone "https://github.com/hrlou/colloid-icon-theme" "${tmp_dir}/colloid"
+	{{ .os.super }} "${tmp_dir}/colloid/install.sh"
 	gtk-update-icon-cache
 fi
 
