Update .config/kitty/kitty.conf Update .foobar2000/profile/config.sqlite Update .foobar2000/profile/theme.fth Change attributes of .vim/vimrc

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1,4 +1,4 @@
-include themes/{{ .style.color_theme }}.conf
+include themes/{{ .style.color_scheme }}.conf
 wayland_titlebar_color system 
 background_opacity	0.85
 dynamic_background_opacity yes
