Update .chezmoi.toml Update .vim/vimrc Add .zsh/functions/fix_sound

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -6,8 +6,8 @@
 {{- $use_gui := promptBoolOnce . "use_gui" "Will this machine be used Graphically" -}} 
 {{- $color_mode_choices := list "dark" "light" -}}
 {{- $color_mode := promptChoiceOnce . "color_mode" "Color Mode" $color_mode_choices -}}
-{{- $color_theme_choices := list "nord" "dracula" "gruvbox"  -}}
-{{- $color_theme := promptChoiceOnce . "color_theme" "Color Theme" $color_theme_choices -}}
+{{- $color_scheme_choices := list "nord" "dracula" "gruvbox"  -}}
+{{- $color_scheme := promptChoiceOnce . "color_scheme" "Color Theme" $color_scheme_choices -}}
 
 {{/* find superuser command */}}
 {{- $dummy := set . "super" false -}}
@@ -52,7 +52,7 @@ wsl = {{ .wsl }}
 
 [data.style]
 color_mode = {{ $color_mode | quote }}
-color_theme = {{ $color_theme | quote }}
+color_scheme = {{ $color_scheme | quote }}
 os_color = {{
    if (eq .distro "termux") -}}
      'bold green'
