--- a/dot_vim/vimrc.tmpl
+++ b/dot_vim/vimrc.tmpl
@@ -9,7 +9,7 @@ Plug 'morhetz/gruvbox'
 
 call plug#end()
 
-colorscheme {{ .os.style.color_scheme }}
+colorscheme {{ .style.color_scheme }}
 set relativenumber
 highlight clear LineNr
 highlight LineNr ctermfg=59 
