--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -3,3 +3,4 @@ wayland_titlebar_color system
 background_opacity	0.85
 dynamic_background_opacity yes
 linux_display_server x11
+font_family FantasqueSansM Nerd Font Regular
