--- a/dot_vim/vimrc.tmpl
+++ b/dot_vim/vimrc.tmpl
@@ -9,6 +9,7 @@ Plug 'morhetz/gruvbox'
 
 call plug#end()
 
+set bg=dark
 colorscheme {{ .style.color_scheme }}
 set relativenumber
 highlight clear LineNr
