--- a/.chezmoitemplates/install-gui.sh.tmpl
+++ b/.chezmoitemplates/install-gui.sh.tmpl
@@ -14,13 +14,6 @@ if [ ! -d "${icons_dir}/Colloid-dark" ]; then
 	gtk-update-icon-cache
 fi
 
-# Install GTK Theme
-if [ ! -d "${themes_dir}/Dracula" ]; then
-	log_info "Installing Dracula..."
-	{{ .os.super }} mkdir -p "${themes_dir}/Dracula"
-	{{ .os.super }} git clone "https://github.com/dracula/gtk" "${themes_dir}/Dracula"
-fi
-
 # Install Fonts
 if [ ! -d "${fonts_dir}/FantasqueSansMono" ]; then
 	wget "https://github.com/ryanoasis/nerd-fonts/releases/download/v3.1.1/FantasqueSansMono.zip" -O "${tmp_dir}/fantasque.zip" 
@@ -28,14 +21,14 @@ if [ ! -d "${fonts_dir}/FantasqueSansMono" ]; then
 fi
 
 rm -rf "${tmp_dir}"
-# log_info "Update gsettings..."
-# gtk-update-icon-cache
-# gsettings set org.gnome.desktop.interface icon-theme 'Colloid-purple-dracula-dark'
-# gsettings set org.gnome.desktop.interface gtk-key-theme 'Dracula'
-# gsettings set org.gnome.desktop.interface gtk-theme 'Dracula'
-# gsettings set org.gnome.desktop.wm.preferences theme 'Dracula'
-# gsettings set org.gnome.shell.extensions.user-theme name 'Dracula'
-# gsettings set org.gnome.desktop.interface document-font-name 'FantasqueSansM Nerd Font 11'
-# gsettings set org.gnome.desktop.interface font-name 'FantasqueSansM Nerd Font 11'
-# gsettings set org.gnome.desktop.interface monospace-font-name 'FantasqueSansM Nerd Font Mono 10'
-# gsettings set org.gnome.desktop.wm.preferences titlebar-font 'FantasqueSansM Nerd Font Bold 11'
+
+gtk-update-icon-cache
+gsettings set org.gnome.desktop.interface document-font-name 'FantasqueSansM Nerd Font 11'
+gsettings set org.gnome.desktop.interface font-name 'FantasqueSansM Nerd Font 11'
+gsettings set org.gnome.desktop.interface monospace-font-name 'FantasqueSansM Nerd Font Mono 10'
+gsettings set org.gnome.desktop.wm.preferences titlebar-font 'FantasqueSansM Nerd Font Bold 11'
+# gsettings set org.gnome.desktop.interface icon-theme ''
+# gsettings set org.gnome.desktop.interface gtk-key-theme ''
+# gsettings set org.gnome.desktop.interface gtk-theme ''
+# gsettings set org.gnome.desktop.wm.preferences theme ''
+# gsettings set org.gnome.shell.extensions.user-theme name ''
