--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -1,1 +1,4 @@
-yay -Syy --needed python-pillow gtk-engine-murrine
+yay -S --needed \
+       	python-pillow \
+	gtk-engine-murrine \
+	gnome-shell-extension-blur-my-shell
