--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -1,4 +1,5 @@
 yay -S --needed \
        	python-pillow \
 	gtk-engine-murrine \
-	gnome-shell-extension-blur-my-shell
+	gnome-shell-extension-blur-my-shell \
+	nnn-nerd
