--- a/.chezmoitemplates/install-manual.sh.tmpl
+++ b/.chezmoitemplates/install-manual.sh.tmpl
@@ -12,6 +12,10 @@ if cmd_check vim; then
 		-c 'qa!'
 fi
 
+if ! cmd_check nnn; then
+	https://github.com/jarun/nnn
+fi
+
 # Install Yay on Arch
 if cmd_check pacman && ! cmd_check yay; then
 	mkdir -p ~/.local/cache
