--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -7,8 +7,10 @@ if cmd_check pacman && ! cmd_check yay; then
 	rm -rf ~/.local/cache/yay
 fi
 
-yay -S --needed \
+yes | yay -S --needed \
        	python-pillow \
 	gtk-engine-murrine \
 	gnome-shell-extension-blur-my-shell \
+	qgnomeplatform-qt5-git \
+	qgnomeplatform-qt6-git \
 	nnn-nerd
