add update to motd

--- a/dot_zsh/motd.zsh.tmpl
+++ b/dot_zsh/motd.zsh.tmpl
@@ -14,6 +14,7 @@ else
 fi
 emod="  "
 
+chezmoi verify || printf "󰚰${emod}Dotfiles Update Available!"
 printf "${emod}${ZSH_NAME}\n"
 printf "${LOGO}${emod}${PRETTY_NAME}\n"
 printf "${emod}Linux [${KERNEL_VERSION}]\n"
