--- a/dot_zsh/motd.zsh.tmpl
+++ b/dot_zsh/motd.zsh.tmpl
@@ -14,8 +14,8 @@ else
 fi
 emod="  "
 
-chezmoi verify || printf "󰚰${emod}Dotfiles Update Available!"
+chezmoi verify || printf "󰚰${emod}Dotfiles Update Available!\n"
 printf "${emod}${ZSH_NAME}\n"
 printf "${LOGO}${emod}${PRETTY_NAME}\n"
 printf "${emod}Linux [${KERNEL_VERSION}]\n"
-
+# vim: ft=zsh
