--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -7,6 +7,9 @@ if cmd_check pacman && ! cmd_check paru; then
 	rm -rf ~/.local/cache/paru
 fi
 
+{{- if eq .chezmoi.uid 0 -}}
+_log_warn "Cannot install packages as root!"
+{{- else -}}
 yes | paru -S --needed \
        	python-pillow \
 	gtk-engine-murrine \
@@ -14,4 +17,5 @@ yes | paru -S --needed \
 	qgnomeplatform-qt5-git \
 	qgnomeplatform-qt6-git \
 	nnn-nerd \
+{{- end -}}
 # vim: ft=bash
