--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -5,10 +5,10 @@ background_opacity	0.85
 
 # font 
 font_family FantasqueSansM Nerd Font Regular
-{{- if eq .chassis "desktop" -}} 
+{{ if eq .chassis "desktop" }} 
 font_size 18.0
-{{- else -}}
+{{ else }}
 font_size 16.0
-{{- end -}}
+{{ end }}
 
 include themes/{{ .style.color_scheme }}.conf
