--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -17,6 +17,14 @@ yes | paru -S --needed \
 	qgnomeplatform-qt5-git \
 	qgnomeplatform-qt6-git \
 	nnn-nerd \
+	ttf-liberation \
+	ttf-roboto \
+	adobe-source-han-sans-cn-fonts \
+	adobe-source-han-sans-tw-fonts \
+	adobe-source-han-sans-hk-fonts \
+	adobe-source-han-sans-jp-fonts \
+	adobe-source-han-sans-kr-fonts \
+	ttf-ancient-fonts \
 	unimatrix
 {{ end }}
 # vim: ft=bash
