--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -19,6 +19,7 @@ yes | paru -S --needed \
 	nnn-nerd \
 	ttf-liberation \
 	ttf-roboto \
+	massren \
 	adobe-source-han-sans-cn-fonts \
 	adobe-source-han-sans-tw-fonts \
 	adobe-source-han-sans-hk-fonts \
@@ -26,6 +27,7 @@ yes | paru -S --needed \
 	adobe-source-han-sans-kr-fonts \
 	ttf-ancient-fonts \
 	unimatrix
+massren --config editor "nvim"
 {{ end }}
 # vim: ft=bash
 
