--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -26,7 +26,8 @@ paru -S --needed \
 	adobe-source-han-sans-jp-fonts \
 	adobe-source-han-sans-kr-fonts \
 	ttf-ancient-fonts \
-	unimatrix
+	unimatrix || \
+	true
 massren --config editor "nvim"
 {{ end }}
 # vim: ft=bash
