--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -30,4 +30,4 @@ require("lazy").setup({
 vim.o.background = {{ .style.color_mode | quote }} 
 vim.cmd([[colorscheme {{ .style.color_scheme }}]])
 vim.wo.relativenumber = true
-# vim: ft=lua
+-- vim: ft=lua
