--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -27,6 +27,7 @@ require("lazy").setup({
 	{ 'alker0/chezmoi.vim', name = 'chezmoi' },
 	{ 'cespare/vim-toml', name = 'toml' },
 	-- EXTRA
+	{ 'lukas-reineke/indent-blankline.nvim', name = 'indent-blankline' },
 	{ 'nvim-telescope/telescope.nvim',
 		name = 'telescope',
 		dependencies = {
