--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -26,6 +26,8 @@ require("lazy").setup({
 	-- SYNTAX
 	{ 'alker0/chezmoi.vim', name = 'chezmoi' },
 	{ 'cespare/vim-toml', name = 'toml' },
+	-- LANGUAGE SUPPORT 
+	{ 'vxpm/ferris.nvim', name = 'ferris' },
 	-- EXTRA
 	{ 'voldikss/vim-floaterm', name = 'floaterm' },
 	{ 'lukas-reineke/indent-blankline.nvim',
