--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -27,7 +27,11 @@ require("lazy").setup({
 	{ 'alker0/chezmoi.vim', name = 'chezmoi' },
 	{ 'cespare/vim-toml', name = 'toml' },
 	-- LANGUAGE SUPPORT 
-	{ 'vxpm/ferris.nvim', name = 'ferris' },
+	{ 'vxpm/ferris.nvim',
+		name = 'ferris',
+		opts = {
+		}
+	},
 	-- EXTRA
 	{ 'voldikss/vim-floaterm', name = 'floaterm' },
 	{ 'lukas-reineke/indent-blankline.nvim',
