--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -30,7 +30,8 @@ require("lazy").setup({
 	{ 'vxpm/ferris.nvim',
 		name = 'ferris',
 		opts = {
-		}
+			create_commands = true,
+		},
 	},
 	-- EXTRA
 	{ 'voldikss/vim-floaterm', name = 'floaterm' },
