--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -36,7 +36,7 @@ require("lazy").setup({
 	-- EXTRA
 	{ 'voldikss/vim-floaterm', name = 'floaterm' },
 	{ 'lukas-reineke/indent-blankline.nvim',
-		name = 'indent-blankline'
+		name = 'indent-blankline',
 		config = function()
 			require("ibl").setup()
 		end, 
