--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -26,6 +26,7 @@ paru -S --needed \
 	adobe-source-han-sans-jp-fonts \
 	adobe-source-han-sans-kr-fonts \
 	ttf-ancient-fonts \
+	xsel \
 	unimatrix || \
 	true
 massren --config editor "nvim"
