--- a/dot_config/nvim/init.lua.tmpl
+++ b/dot_config/nvim/init.lua.tmpl
@@ -1,6 +1,7 @@
 vim.g.loaded_netrw = 1
 vim.g.loaded_netrwPlugin = 1
 vim.opt.termguicolors = true
+vim.opt.clipboard = unnamedplus
 
 local lazypath = vim.fn.stdpath("data") .. "/lazy/lazy.nvim"
 if not vim.loop.fs_stat(lazypath) then
@@ -35,14 +36,6 @@ require("lazy").setup({
 	},
 	-- EXTRA
 	{ 'voldikss/vim-floaterm', name = 'floaterm' },
-	{ 'iamcco/markdown-preview.nvim',
-		name = 'markdown-preview',
-    		cmd = { "MarkdownPreviewToggle", "MarkdownPreview", "MarkdownPreviewStop" },
-    		ft = { "markdown" },
-    		build = function()
-			vim.fn["mkdp#util#install"]()
-		end,
-	},
 	{ 'EtiamNullam/deferred-clipboard.nvim',
 		name = 'deferred-clipboard',
 		config = function()
