--- a/.chezmoitemplates/install-pkg.sh.tmpl
+++ b/.chezmoitemplates/install-pkg.sh.tmpl
@@ -21,7 +21,7 @@ pkg_find_all() {
 	pkg_add git
 	pkg_add htop
 	pkg_add jq
-	pkg_add ranger
+	# pkg_add ranger
 	pkg_add vim
 	pkg_add zsh
 	pkg_add wget
