Make vim simple

--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -16,7 +16,7 @@ paru -S --needed \
 	gnome-shell-extension-blur-my-shell \
 	qgnomeplatform-qt5 \
 	qgnomeplatform-qt6 \
-	nnn-nerd \
+	joshuto-bin \
 	ttf-liberation \
 	ttf-roboto \
 	massren \
