--- a/.chezmoitemplates/install-archlinux.sh.tmpl
+++ b/.chezmoitemplates/install-archlinux.sh.tmpl
@@ -26,6 +26,8 @@ paru -S --needed \
 	adobe-source-han-sans-jp-fonts \
 	adobe-source-han-sans-kr-fonts \
 	ttf-ancient-fonts \
+	meld \
+	bat \
 	xsel \
 	unimatrix || \
 	true
