Add .config/nvim/after/ftplugin/rust.lua Update .config/nvim/init.lua Add .config/nvim/lazy-lock.json Add .config/nvim/lua/plugins/config/floaterm.lua Add .config/nvim/lua/plugins/config/guard.lua Add .config/nvim/lua/plugins/config/init.lua Add .config/nvim/lua/plugins/config/lsp.lua Add .config/nvim/lua/plugins/init.lua Update 00_install_packages.sh

--- a/run_before_00_install_packages.sh.tmpl
+++ b/run_before_00_install_packages.sh.tmpl
@@ -3,13 +3,14 @@
 log_info "Installing pre-requisites"
 if cmd_check pacman; then
 	if ! cmd_check paru; then
+		CLONE="${HOME}/.local/clone"
 		log_info "'paru' not found, installing!"
-		mkdir -p ~/.local/cache/paru
-		git clone https://aur.archlinux.org/paru.git ~/.local/cache/paru
-		cd ~/.local/cache/paru
+		mkdir -p ${CLONE}
+		git clone 'https://aur.archlinux.org/paru.git' "${CLONE}/paru"
+		cd "${CLONE}/paru"
 		makepkg -si
 		cd -
-		rm -rf ~/.local/cache/paru
+		rm -rf "${CLONE}/paru"
 	else
 		log_debug "'paru' found!"
 	fi
