Add .assets/tweaks/gnome-experimental_scale_off.sh Add .assets/tweaks/gnome-experimental_scale_on.sh Update .config/kitty/kitty.conf

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1,5 +1,5 @@
-linux_display_server x11
-wayland_titlebar_color system 
+wayland_titlebar_color #1e1e2e 
+window_logo_path none
 dynamic_background_opacity yes
 background_opacity	0.85
 
